@@ -1,7 +1,7 @@
 /* -*-pgsql-c-*- */
 /*
  *
- * $Header: /cvsroot/pgpool/pgpool-II/pool.h,v 1.6 2007/06/22 09:50:51 y-asaba Exp $
+ * $Header: /cvsroot/pgpool/pgpool-II/pool.h,v 1.5.2.1 2007/06/27 08:30:20 y-asaba Exp $
  *
  * pgpool: a language independent connection pool server for PostgreSQL 
  * written by Tatsuo Ishii
@@ -148,8 +148,6 @@ typedef struct {
 	int health_check_timeout;	/* health check timeout */
 	int health_check_period;	/* health check period */
 	char *health_check_user;		/* PostgreSQL user name for health check */
-	char *recovery_user;		/* PostgreSQL user name for online recovery */
-	char *recovery_password;		/* PostgreSQL user password for online recovery */
 	int insert_lock;	/* if non 0, automatically lock table with INSERT to keep SERIAL
 						   data consistency */
 	int ignore_leading_white_space;		/* ignore leading white spaces of each query */
@@ -306,7 +304,7 @@ typedef struct {
 	 (BACKEND_INFO(backend_id).backend_status == CON_CONNECT_WAIT)))
 #define CONNECTION_SLOT(p, slot) ((p)->slots[(slot)])
 #define CONNECTION(p, slot) (CONNECTION_SLOT(p, slot)->con)
-#define MASTER_CONNECTION(p) ((p)->slots[Req_info->master_node_id])
+#define MASTER_CONNECTION(p) ((p)->slots[MASTER_NODE_ID])
 #define MASTER_NODE_ID (in_load_balance? selected_slot : Req_info->master_node_id)
 #define IS_MASTER_NODE_ID(node_id) (MASTER_NODE_ID == (node_id))
 //#define SECONDARY_CONNECTION(p) ((p)->slots[1])
@@ -331,7 +329,6 @@ typedef struct {
 #define NO_LOCK_COMMENT_SZ (sizeof(NO_LOCK_COMMENT)-1)
 
 #define MAX_NUM_SEMAPHORES		3
-#define CONN_COUNTER_SEM 0
 
 #define MY_PROCESS_INFO (pids[my_proc_id])
 
@@ -350,15 +347,13 @@ typedef enum SemNum
  */
 typedef enum {
 	NODE_UP_REQUEST = 0,
-	NODE_DOWN_REQUEST,
-	NODE_RECOVERY_REQUEST
+	NODE_DOWN_REQUEST
 } POOL_REQUEST_KIND;
 
 typedef struct {
 	POOL_REQUEST_KIND	kind;	/* request kind */
 	int node_id;		/* request node id */
 	int master_node_id;	/* the youngest node id which is not in down status */
-	int conn_counter;
 } POOL_REQUEST_INFO;
 
 /*
@@ -374,7 +369,6 @@ extern int in_load_balance;		/* non 0 if in load balance mode */
 extern int selected_slot;		/* selected DB node for load balance */
 extern int master_slave_dml;	/* non 0 if master/slave mode is specified in config file */
 extern POOL_REQUEST_INFO *Req_info;
-extern volatile int *InRecovery;
 extern char remote_ps_data[];		/* used for set_ps_display */
 
 /*
@@ -461,9 +455,6 @@ extern int send_startup_packet(POOL_CONNECTION_POOL_SLOT *cp);
 extern void pool_free_startup_packet(StartupPacket *sp);
 extern void child_exit(int code);
 
-extern void connection_count_up(void);
-extern void connection_count_down(void);
-
 extern int health_check(void);
 extern int system_db_health_check(void);
 
@@ -517,9 +508,5 @@ extern void init_ps_display(const char *username, const char *dbname,
 							const char *host_info, const char *initial_str);
 extern void set_ps_display(const char *activity, bool force);
 extern const char *get_ps_display(int *displen);
-
-/* recovery.c */
-extern int start_recovery(int recovery_node);
-extern void finish_recovery(void);
 
 #endif /* POOL_H */
